tests/agl/rejections/parse/partial_placeholder_numbered_gap.agl
def f(a: int, b: int) -> int = a + b

let bad = f(?1, ?3)
